Update file Reader to handle stimulations only, and added unit tests

--- a/modules/csv/CMakeLists.txt
+++ b/modules/csv/CMakeLists.txt
@@ -32,6 +32,7 @@ INCLUDE("FindOpenViBECommon")
 INCLUDE("FindOpenViBEModuleFS")
 INCLUDE("FindThirdPartyBoost")
 INCLUDE("FindThirdPartyBoost_FileSystem")
+INCLUDE("FindThirdPartyBoost_Regex")
 
 # ---------------------------------
 # Target macros
