--- a/validation-test/openvibe-file-io-csv/signal.xml.in
+++ b/validation-test/openvibe-file-io-csv/signal.xml.in
@@ -1,264 +1,186 @@
 <OpenViBE-Scenario>
-	<Boxes>
-		<Box>
-			<Identifier>(0x00000be0, 0x000028d6)</Identifier>
-			<Name>CSV File Writer</Name>
-			<AlgorithmClassIdentifier>(0x2c9312f1, 0x2d6613e5)</AlgorithmClassIdentifier>
-			<Inputs>
-				<Input>
-					<TypeIdentifier>(0x5ba36127, 0x195feae1)</TypeIdentifier>
-					<Name>Input signal</Name>
-				</Input>
-			</Inputs>
-			<Settings>
-				<Setting>
-					<TypeIdentifier>(0x330306dd, 0x74a95f98)</TypeIdentifier>
-					<Name>Filename</Name>
-					<DefaultValue>record-[$core{date}-$core{time}].csv</DefaultValue>
-					<Value>@OVT_TEST_TEMPORARY_DIR@/output-signal.csv</Value>
-					<Modifiability>false</Modifiability>
-				</Setting>
-				<Setting>
-					<TypeIdentifier>(0x79a9edeb, 0x245d83fc)</TypeIdentifier>
-					<Name>Column separator</Name>
-					<DefaultValue>;</DefaultValue>
-					<Value>;</Value>
-					<Modifiability>false</Modifiability>
-				</Setting>
-				<Setting>
-					<TypeIdentifier>(0x007deef9, 0x2f3e95c6)</TypeIdentifier>
-					<Name>Precision</Name>
-					<DefaultValue>10</DefaultValue>
-					<Value>10</Value>
-					<Modifiability>false</Modifiability>
-				</Setting>
-			</Settings>
-			<Attributes>
-				<Attribute>
-					<Identifier>(0x1fa7a38f, 0x54edbe0b)</Identifier>
-					<Value>352.000000</Value>
-				</Attribute>
-				<Attribute>
-					<Identifier>(0x1fa963f5, 0x1a638cd4)</Identifier>
-					<Value>33</Value>
-				</Attribute>
-				<Attribute>
-					<Identifier>(0x207c9054, 0x3c841b63)</Identifier>
-					<Value>352.000000</Value>
-				</Attribute>
-				<Attribute>
-					<Identifier>(0x4e7b798a, 0x183beafb)</Identifier>
-					<Value>(0x229d1207, 0xebac8ab0)</Value>
-				</Attribute>
-				<Attribute>
-					<Identifier>(0x527ad68d, 0x16d746a0)</Identifier>
-					<Value></Value>
-				</Attribute>
-				<Attribute>
-					<Identifier>(0xad100179, 0xa3c984ab)</Identifier>
-					<Value>107</Value>
-				</Attribute>
-				<Attribute>
-					<Identifier>(0xc46b3d00, 0x3e0454e1)</Identifier>
-					<Value>(0x00000000, 0x013e5cfe)</Value>
-				</Attribute>
-				<Attribute>
-					<Identifier>(0xc67a01dc, 0x28ce06c1)</Identifier>
-					<Value></Value>
-				</Attribute>
-				<Attribute>
-					<Identifier>(0xc73e83ec, 0xf855c5bc)</Identifier>
-					<Value>false</Value>
-				</Attribute>
-				<Attribute>
-					<Identifier>(0xce18836a, 0x9c0eb403)</Identifier>
-					<Value>3</Value>
-				</Attribute>
-				<Attribute>
-					<Identifier>(0xcfad85b0, 0x7c6d841c)</Identifier>
-					<Value>1</Value>
-				</Attribute>
-			</Attributes>
-		</Box>
-		<Box>
-			<Identifier>(0x00000e75, 0x00001caf)</Identifier>
-			<Name>Signal</Name>
-			<AlgorithmClassIdentifier>(0x641d0717, 0x02884107)</AlgorithmClassIdentifier>
-			<Outputs>
-				<Output>
-					<TypeIdentifier>(0x5ba36127, 0x195feae1)</TypeIdentifier>
-					<Name>Output signal</Name>
-				</Output>
-			</Outputs>
-			<Settings>
-				<Setting>
-					<TypeIdentifier>(0x330306dd, 0x74a95f98)</TypeIdentifier>
-					<Name>Filename</Name>
-					<DefaultValue></DefaultValue>
-					<Value>@CMAKE_CURRENT_SOURCE_DIR@/input-signal.csv</Value>
-					<Modifiability>false</Modifiability>
-				</Setting>
-				<Setting>
-					<TypeIdentifier>(0x79a9edeb, 0x245d83fc)</TypeIdentifier>
-					<Name>Column separator</Name>
-					<DefaultValue>;</DefaultValue>
-					<Value>;</Value>
-					<Modifiability>false</Modifiability>
-				</Setting>
-				<Setting>
-					<TypeIdentifier>(0x2cdb2f0b, 0x12f231ea)</TypeIdentifier>
-					<Name>Don't use the file time</Name>
-					<DefaultValue>false</DefaultValue>
-					<Value>false</Value>
-					<Modifiability>false</Modifiability>
-				</Setting>
-				<Setting>
-					<TypeIdentifier>(0x007deef9, 0x2f3e95c6)</TypeIdentifier>
-					<Name>Samples per buffer</Name>
-					<DefaultValue>32</DefaultValue>
-					<Value>32</Value>
-					<Modifiability>false</Modifiability>
-				</Setting>
-			</Settings>
-			<Attributes>
-				<Attribute>
-					<Identifier>(0x1fa7a38f, 0x54edbe0b)</Identifier>
-					<Value>240.000000</Value>
-				</Attribute>
-				<Attribute>
-					<Identifier>(0x1fa963f5, 0x1a638cd4)</Identifier>
-					<Value>53</Value>
-				</Attribute>
-				<Attribute>
-					<Identifier>(0x207c9054, 0x3c841b63)</Identifier>
-					<Value>352.000000</Value>
-				</Attribute>
-				<Attribute>
-					<Identifier>(0x30a4e5c9, 0x83502953)</Identifier>
-					<Value></Value>
-				</Attribute>
-				<Attribute>
-					<Identifier>(0x4e7b798a, 0x183beafb)</Identifier>
-					<Value>(0x3bf57676, 0xad3aaefa)</Value>
-				</Attribute>
-				<Attribute>
-					<Identifier>(0xad100179, 0xa3c984ab)</Identifier>
-					<Value>85</Value>
-				</Attribute>
-				<Attribute>
-					<Identifier>(0xc46b3d00, 0x3e0454e1)</Identifier>
-					<Value>(0x00000000, 0x03daa359)</Value>
-				</Attribute>
-				<Attribute>
-					<Identifier>(0xc73e83ec, 0xf855c5bc)</Identifier>
-					<Value>false</Value>
-				</Attribute>
-				<Attribute>
-					<Identifier>(0xc80ce8af, 0xf699f813)</Identifier>
-					<Value>1</Value>
-				</Attribute>
-				<Attribute>
-					<Identifier>(0xce18836a, 0x9c0eb403)</Identifier>
-					<Value>4</Value>
-				</Attribute>
-			</Attributes>
-		</Box>
-	</Boxes>
-	<Links>
-		<Link>
-			<Identifier>(0x00007ce9, 0x000034b3)</Identifier>
-			<Source>
-				<BoxIdentifier>(0x00000e75, 0x00001caf)</BoxIdentifier>
-				<BoxOutputIndex>0</BoxOutputIndex>
-			</Source>
-			<Target>
-				<BoxIdentifier>(0x00000be0, 0x000028d6)</BoxIdentifier>
-				<BoxInputIndex>0</BoxInputIndex>
-			</Target>
-			<Attributes>
-				<Attribute>
-					<Identifier>(0x1b32c44c, 0x1905e0e9)</Identifier>
-					<Value>273</Value>
-				</Attribute>
-				<Attribute>
-					<Identifier>(0x358ae8b5, 0x0f8bacd1)</Identifier>
-					<Value>352</Value>
-				</Attribute>
-				<Attribute>
-					<Identifier>(0x3f0a3b27, 0x570913d2)</Identifier>
-					<Value>331</Value>
-				</Attribute>
-				<Attribute>
-					<Identifier>(0x6267b5c5, 0x676e3e42)</Identifier>
-					<Value>352</Value>
-				</Attribute>
-			</Attributes>
-		</Link>
-	</Links>
-	<MessageLinks></MessageLinks>
-	<Comments></Comments>
-	<VisualisationTree>
-		<VisualisationWidget>
-			<Identifier>(0x000057d8, 0x00005097)</Identifier>
-			<Name>Default window</Name>
-			<Type>1</Type>
-			<ParentIdentifier>(0xffffffff, 0xffffffff)</ParentIdentifier>
-			<BoxIdentifier>(0xffffffff, 0xffffffff)</BoxIdentifier>
-			<NumChildren>1</NumChildren>
-			<Attributes>
-				<Attribute>
-					<Identifier>(0x4c90d4ad, 0x7a2554ec)</Identifier>
-					<Value>1</Value>
-				</Attribute>
-				<Attribute>
-					<Identifier>(0x7b814cca, 0x271df6dd)</Identifier>
-					<Value>1</Value>
-				</Attribute>
-			</Attributes>
-		</VisualisationWidget>
-		<VisualisationWidget>
-			<Identifier>(0x000019df, 0x000079ec)</Identifier>
-			<Name>Default tab</Name>
-			<Type>2</Type>
-			<ParentIdentifier>(0x000057d8, 0x00005097)</ParentIdentifier>
-			<Index>0</Index>
-			<BoxIdentifier>(0xffffffff, 0xffffffff)</BoxIdentifier>
-			<NumChildren>1</NumChildren>
-		</VisualisationWidget>
-		<VisualisationWidget>
-			<Identifier>(0x000062c0, 0x00001744)</Identifier>
-			<Name>Empty</Name>
-			<Type>0</Type>
-			<ParentIdentifier>(0x000019df, 0x000079ec)</ParentIdentifier>
-			<Index>0</Index>
-			<BoxIdentifier>(0xffffffff, 0xffffffff)</BoxIdentifier>
-			<NumChildren>0</NumChildren>
-		</VisualisationWidget>
-	</VisualisationTree>
-	<Attributes>
-		<Attribute>
-			<Identifier>(0x790d75b8, 0x3bb90c33)</Identifier>
-			<Value>Jussi T. Lindgren</Value>
-		</Attribute>
-		<Attribute>
-			<Identifier>(0x8c1fc55b, 0x7b433dc2)</Identifier>
-			<Value>0.1</Value>
-		</Attribute>
-		<Attribute>
-			<Identifier>(0x9f5c4075, 0x4a0d3666)</Identifier>
-			<Value>Tiny CSV IO test</Value>
-		</Attribute>
-		<Attribute>
-			<Identifier>(0xf36a1567, 0xd13c53da)</Identifier>
-			<Value></Value>
-		</Attribute>
-		<Attribute>
-			<Identifier>(0xf6b2e3fa, 0x7bd43926)</Identifier>
-			<Value></Value>
-		</Attribute>
-		<Attribute>
-			<Identifier>(0xf8034a49, 0x8b3f37cc)</Identifier>
-			<Value></Value>
-		</Attribute>
-	</Attributes>
+    <FormatVersion>2</FormatVersion>
+    <Creator>OpenViBE Designer</Creator>
+    <CreatorVersion>3.1.0</CreatorVersion>
+    <Settings></Settings>
+    <Inputs></Inputs>
+    <Outputs></Outputs>
+    <Boxes>
+        <Box>
+            <Identifier>(0x26be283c, 0x322ca908)</Identifier>
+            <Name>CSV File Reader</Name>
+            <AlgorithmClassIdentifier>(0x336a3d9a, 0x753f1ba4)</AlgorithmClassIdentifier>
+            <Outputs>
+                <Output>
+                    <TypeIdentifier>(0x5ba36127, 0x195feae1)</TypeIdentifier>
+                    <Name>Output stream</Name>
+                </Output>
+                <Output>
+                    <TypeIdentifier>(0x6f752dd0, 0x082a321e)</TypeIdentifier>
+                    <Name>Output stimulation</Name>
+                </Output>
+            </Outputs>
+            <Settings>
+                <Setting>
+                    <TypeIdentifier>(0x330306dd, 0x74a95f98)</TypeIdentifier>
+                    <Name>Filename</Name>
+                    <DefaultValue></DefaultValue>
+                    <Value>@CMAKE_CURRENT_SOURCE_DIR@/input-signal.csv</Value>
+                    <Modifiability>false</Modifiability>
+                </Setting>
+            </Settings>
+            <Attributes>
+                <Attribute>
+                    <Identifier>(0x1fa7a38f, 0x54edbe0b)</Identifier>
+                    <Value>128</Value>
+                </Attribute>
+                <Attribute>
+                    <Identifier>(0x207c9054, 0x3c841b63)</Identifier>
+                    <Value>528</Value>
+                </Attribute>
+                <Attribute>
+                    <Identifier>(0x30a4e5c9, 0x83502953)</Identifier>
+                    <Value></Value>
+                </Attribute>
+                <Attribute>
+                    <Identifier>(0x4e7b798a, 0x183beafb)</Identifier>
+                    <Value>(0xa9cdc629, 0xb153eb33)</Value>
+                </Attribute>
+                <Attribute>
+                    <Identifier>(0xc80ce8af, 0xf699f813)</Identifier>
+                    <Value>2</Value>
+                </Attribute>
+                <Attribute>
+                    <Identifier>(0xce18836a, 0x9c0eb403)</Identifier>
+                    <Value>1</Value>
+                </Attribute>
+            </Attributes>
+        </Box>
+        <Box>
+            <Identifier>(0x40eae4b1, 0x7c89fc52)</Identifier>
+            <Name>CSV File Writer</Name>
+            <AlgorithmClassIdentifier>(0x428375e8, 0x325f2db9)</AlgorithmClassIdentifier>
+            <Inputs>
+                <Input>
+                    <TypeIdentifier>(0x5ba36127, 0x195feae1)</TypeIdentifier>
+                    <Name>Input stream</Name>
+                </Input>
+                <Input>
+                    <TypeIdentifier>(0x6f752dd0, 0x082a321e)</TypeIdentifier>
+                    <Name>Stimulations stream</Name>
+                </Input>
+            </Inputs>
+            <Settings>
+                <Setting>
+                    <TypeIdentifier>(0x330306dd, 0x74a95f98)</TypeIdentifier>
+                    <Name>Filename</Name>
+                    <DefaultValue>record-[$core{date}-$core{time}].csv</DefaultValue>
+                    <Value>@OVT_TEST_TEMPORARY_DIR@/output-signal.csv</Value>
+                    <Modifiability>false</Modifiability>
+                </Setting>
+                <Setting>
+                    <TypeIdentifier>(0x007deef9, 0x2f3e95c6)</TypeIdentifier>
+                    <Name>Precision</Name>
+                    <DefaultValue>10</DefaultValue>
+                    <Value>10</Value>
+                    <Modifiability>false</Modifiability>
+                </Setting>
+                <Setting>
+                    <TypeIdentifier>(0x2cdb2f0b, 0x12f231ea)</TypeIdentifier>
+                    <Name>Append data</Name>
+                    <DefaultValue>false</DefaultValue>
+                    <Value>false</Value>
+                    <Modifiability>false</Modifiability>
+                </Setting>
+                <Setting>
+                    <TypeIdentifier>(0x2cdb2f0b, 0x12f231ea)</TypeIdentifier>
+                    <Name>Only last matrix</Name>
+                    <DefaultValue>false</DefaultValue>
+                    <Value>false</Value>
+                    <Modifiability>false</Modifiability>
+                </Setting>
+            </Settings>
+            <Attributes>
+                <Attribute>
+                    <Identifier>(0x1fa7a38f, 0x54edbe0b)</Identifier>
+                    <Value>368</Value>
+                </Attribute>
+                <Attribute>
+                    <Identifier>(0x207c9054, 0x3c841b63)</Identifier>
+                    <Value>512</Value>
+                </Attribute>
+                <Attribute>
+                    <Identifier>(0x4e7b798a, 0x183beafb)</Identifier>
+                    <Value>(0xee4b6d30, 0x788aed29)</Value>
+                </Attribute>
+                <Attribute>
+                    <Identifier>(0x527ad68d, 0x16d746a0)</Identifier>
+                    <Value></Value>
+                </Attribute>
+                <Attribute>
+                    <Identifier>(0xce18836a, 0x9c0eb403)</Identifier>
+                    <Value>4</Value>
+                </Attribute>
+                <Attribute>
+                    <Identifier>(0xcfad85b0, 0x7c6d841c)</Identifier>
+                    <Value>2</Value>
+                </Attribute>
+            </Attributes>
+        </Box>
+    </Boxes>
+    <Links>
+        <Link>
+            <Identifier>(0x6c46d04d, 0x41ac59e5)</Identifier>
+            <Source>
+                <BoxIdentifier>(0x26be283c, 0x322ca908)</BoxIdentifier>
+                <BoxOutputIndex>0</BoxOutputIndex>
+            </Source>
+            <Target>
+                <BoxIdentifier>(0x40eae4b1, 0x7c89fc52)</BoxIdentifier>
+                <BoxInputIndex>0</BoxInputIndex>
+            </Target>
+        </Link>
+    </Links>
+    <Comments></Comments>
+    <Metadata>
+        <Entry>
+            <Identifier>(0x39f1030a, 0x4627cfee)</Identifier>
+            <Type>(0x3bcce5d2, 0x43f2d968)</Type>
+            <Data>[]</Data>
+        </Entry>
+    </Metadata>
+    <Attributes>
+        <Attribute>
+            <Identifier>(0x4c90d4ad, 0x7a2554ec)</Identifier>
+            <Value>1</Value>
+        </Attribute>
+        <Attribute>
+            <Identifier>(0x790d75b8, 0x3bb90c33)</Identifier>
+            <Value>Jussi T. Lindgren</Value>
+        </Attribute>
+        <Attribute>
+            <Identifier>(0x7b814cca, 0x271df6dd)</Identifier>
+            <Value>1</Value>
+        </Attribute>
+        <Attribute>
+            <Identifier>(0x8c1fc55b, 0x7b433dc2)</Identifier>
+            <Value>0.1</Value>
+        </Attribute>
+        <Attribute>
+            <Identifier>(0x9f5c4075, 0x4a0d3666)</Identifier>
+            <Value>Tiny CSV IO test</Value>
+        </Attribute>
+        <Attribute>
+            <Identifier>(0xf36a1567, 0xd13c53da)</Identifier>
+            <Value></Value>
+        </Attribute>
+        <Attribute>
+            <Identifier>(0xf6b2e3fa, 0x7bd43926)</Identifier>
+            <Value></Value>
+        </Attribute>
+        <Attribute>
+            <Identifier>(0xf8034a49, 0x8b3f37cc)</Identifier>
+            <Value></Value>
+        </Attribute>
+    </Attributes>
 </OpenViBE-Scenario>
