--- a/validation-test/openvibe-file-io-csv/CMakeLists.txt
+++ b/validation-test/openvibe-file-io-csv/CMakeLists.txt
@@ -37,6 +37,9 @@ SET(TEST_MODULE FileIO-CSV)
 # Test scenario for CSV reading and writing test purpose
 SET(TEST_SCENARIOS 
 	streamed-matrix
+	empty-labels-matrix
+	vector-matrix
+	empty-labels-vector
 	features
 	signal
 	stimulation
