Update build: bring back include installs

--- a/modules/fs/CMakeLists.txt
+++ b/modules/fs/CMakeLists.txt
@@ -40,3 +40,5 @@ install(TARGETS ${PROJECT_NAME}
         RUNTIME DESTINATION ${DIST_BINDIR}
         LIBRARY DESTINATION ${DIST_LIBDIR}
         ARCHIVE DESTINATION ${DIST_LIBDIR})
+
+INSTALL(DIRECTORY include/ DESTINATION ${DIST_INCLUDEDIR} COMPONENT headers FILES_MATCHING PATTERN "*.h")
