--- a/modules/csv/CMakeLists.txt
+++ b/modules/csv/CMakeLists.txt
@@ -41,4 +41,7 @@ SET_BUILD_PLATFORM()
 install(TARGETS ${PROJECT_NAME}
         RUNTIME DESTINATION ${DIST_BINDIR}
         LIBRARY DESTINATION ${DIST_LIBDIR}
-        ARCHIVE DESTINATION ${DIST_LIBDIR})
+        ARCHIVE DESTINATION ${DIST_LIBDIR}
+)
+
+INSTALL(DIRECTORY include/ DESTINATION ${DIST_INCLUDEDIR} COMPONENT headers FILES_MATCHING PATTERN "*.h")
