--- a/unit-test/CMakeLists.txt
+++ b/unit-test/CMakeLists.txt
@@ -28,7 +28,7 @@ else()
 	SET(CMAKE_FIND_LIBRARY_SUFFIXES ".so" ".a")
 endif()
 
-set(GTEST_ROOT ${OV_CUSTOM_DEPENDENCIES_PATH}/${CMAKE_FIND_LIBRARY_PREFIXES}gtest)
+set(GTEST_ROOT ${LIST_DEPENDENCIES_PATH}/${CMAKE_FIND_LIBRARY_PREFIXES}gtest)
 find_package(GTest REQUIRED)
 include_directories(${GTEST_INCLUDE_DIRS})
 
