--- a/build-tool/stimulation-generator/CMakeLists.txt
+++ b/build-tool/stimulation-generator/CMakeLists.txt
@@ -1,12 +1,12 @@
-PROJECT(openvibe-stimulation-generator)
-
-SET(PROJECT_VERSION_MAJOR ${OV_GLOBAL_VERSION_MAJOR})
-SET(PROJECT_VERSION_MINOR ${OV_GLOBAL_VERSION_MINOR})
-SET(PROJECT_VERSION_PATCH ${OV_GLOBAL_VERSION_PATCH})
-SET(PROJECT_VERSION ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}.${PROJECT_VERSION_PATCH})
+PROJECT(openvibe-stimulation-generator VERSION ${OPENVIBE_MAJOR_VERSION}.${OPENVIBE_MINOR_VERSION}.${OPENVIBE_PATCH_VERSION})
 
 FILE(GLOB_RECURSE SRC_FILES src/*.cpp src/*.h src/*.inl)
-ADD_EXECUTABLE(openvibe-stimulation-generator ${SRC_FILES})
+ADD_EXECUTABLE(${PROJECT_NAME} ${SRC_FILES})
+
+set_target_properties(${PROJECT_NAME} PROPERTIES
+	VERSION ${PROJECT_VERSION}
+	FOLDER ${MISC_FOLDER}
+)
 
 # if(UNIX)
 # SET(stim_generator_path  "${CMAKE_CURRENT_BINARY_DIR}" CACHE INTERNAL "stim_generator_path")
