--- a/modules/xml/CMakeLists.txt
+++ b/modules/xml/CMakeLists.txt
@@ -7,7 +7,8 @@ add_library(${PROJECT_NAME} SHARED ${SRC_FILES})
 
 target_link_libraries(${PROJECT_NAME}
                       openvibe-common
-                      openvibe-module-fs)
+                      openvibe-module-fs
+                      Boost::boost)
 
 target_include_directories(${PROJECT_NAME} 
                            PRIVATE include/xml
@@ -23,8 +24,7 @@ target_compile_options(${PROJECT_NAME}
                        PRIVATE -DXML_Exports
                        PUBLIC -DXML_Shared 
 )
-    
-include("FindThirdPartyBoost")
+
 include("FindThirdPartyExpat")
 
 # ---------------------------------
