--- a/unit-test/openvibe-module-csv/CMakeLists.txt
+++ b/unit-test/openvibe-module-csv/CMakeLists.txt
@@ -38,8 +38,7 @@ set(TEST_WITH_PARAM
 )
 
 # Test that needs to called without parameters
-set(TEST_NO_PARAM
-)
+set(TEST_NO_PARAM)
 
 # Create test sources list
 # This macro auto-generate ${PROJECT_NAME}.cpp
@@ -50,7 +49,7 @@ create_test_sourcelist (Tests
 	${PROJECT_NAME}.cpp
 	${TEST_WITH_PARAM}
 	${TEST_NO_PARAM}
-	)
+)
 
 add_executable(${PROJECT_NAME} ${Tests})
 
@@ -59,7 +58,8 @@ target_link_libraries(${PROJECT_NAME}
                       openvibe-module-csv 
                       ${OVT_UNIT_TOOLKIT_LIB}
                       ${GTEST_BOTH_LIBRARIES}
-                      ${OV_LIBS} ${OV_MODULE_CSV})
+                      ${OV_LIBS} ${OV_MODULE_CSV}
+)
 
 set_target_properties(${PROJECT_NAME} PROPERTIES
                       FOLDER ${TESTS_FOLDER})
