--- a/modules/xml/CMakeLists.txt
+++ b/modules/xml/CMakeLists.txt
@@ -8,11 +8,13 @@ add_library(${PROJECT_NAME} SHARED ${SRC_FILES})
 target_link_libraries(${PROJECT_NAME}
                       openvibe-common
                       openvibe-module-fs
-                      Boost::boost)
+                      Boost::boost
+)
 
 target_include_directories(${PROJECT_NAME} 
                            PRIVATE include/xml
-                           PUBLIC include)
+                           PUBLIC include
+)
 
 set_target_properties(${PROJECT_NAME} PROPERTIES
                       VERSION ${PROJECT_VERSION}
