--- a/unit-test/openvibe-module-fs/CMakeLists.txt
+++ b/unit-test/openvibe-module-fs/CMakeLists.txt
@@ -29,13 +29,14 @@ SET_BUILD_PLATFORM()
 add_executable(${PROJECT_NAME} uoFilesTestUTF.cpp)
 
 target_link_libraries(${PROJECT_NAME} 
-                      ${GTEST_BOTH_LIBRARIES}
-                      openvibe
-                      openvibe-common
-                      openvibe-module-fs
-                      openvibe-test-unit-toolkit
-                      Boost::boost
-                      Boost::filesystem
+					  ${GTEST_BOTH_LIBRARIES}
+					  openvibe
+					  openvibe-common
+					  openvibe-module-fs
+					  openvibe-test-unit-toolkit
+					  Boost::boost
+					  Boost::filesystem
+					  GTest::GTest
 )
 
 set_property(TARGET ${PROJECT_NAME} PROPERTY FOLDER ${TESTS_FOLDER})	# Place project in folder unit-test (for some IDE)
